applications/integration/networking/access/tcp/neo4j/neo4j-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: neo4j-gateway
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
  - port:
      name: tcp
      number: 202
      protocol: TCP
    hosts:
    - '*'
