applications/integration/networking/access/tcp/neo4j/neo4j-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: neo4j-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - neo4j-gateway
  http:
  - match:
    - port: 7687
    route:
    - destination:
        host: neo4j-service.storage.svc.cluster.local
        port:
          number: 7687
